bug: 32536 integrate MimeDetect bug fixes and perf improvements from main - they are now identical
http://bugzilla.zimbra.com/show_bug.cgi?id=32536

Copied from Perforce
 Change: 166662